# haskcord

./: library.cabal
src/Haskcord/: Cache.hs  Client.hs  Client.hs~  EventDispatch.hs  EventLoop.hs  Gateway.hs  Heartbeat.hs  Permissions.hs  Request.hs  Routes.hs  Token.hs
src/Haskcord/Entity/: User.hs
src/Haskcord/Protocol/: Event.hs  GatewayIdentify.hs  GatewayMessage.hs  Hello.hs
src/Haskcord/Resource/: Base.hs  Channel.hs  Guild.hs  GuildChannel.hs  Id.hs  User.hs
