name:                library
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/library#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Haskcord.Client
                     , Haskcord.EventLoop
                     , Haskcord.Gateway
                     , Haskcord.Protocol.GatewayMessage
                     , Haskcord.Protocol.GatewayIdentify
                     , Haskcord.Request
                     , Haskcord.Token
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , http-types
                     , lens
                     , mtl
                     , text
                     , transformers
                     , unordered-containers
                     , vector
                     , websockets
                     , wreq
                     , wuss
  default-language:    Haskell2010

test-suite library-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , library
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/library
